Implemented ActionRouter for base CRUD routes

--- a/nginx/sites-enabled/user-module.conf
+++ b/nginx/sites-enabled/user-module.conf
@@ -2,3 +2,8 @@ location /users {
   proxy_pass http://user-module:5000/users;
   proxy_set_header Host "localhost";
 }
+
+location /apidoc {
+  proxy_pass http://user-module:5000/apidoc;
+  proxy_set_header Host "localhost";
+}
