--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,14 +7,14 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: ["3.9"]
     steps:
      - uses: actions/checkout@v2  
      - name: Python Linter
-       uses: sunnysid3up/python-linter@master
+       uses: jaykv/python-linter@master
        with:
          source: "resto"
-         mypy-options: "--ignore-missing-imports --show-error-codes"
+         mypy-options: false
          pylint-options: "--rcfile=setup.cfg"
          isort-options: "-w 100"
          black-options: "--line-length 100 --skip-string-normalization"
