Fixed isort config

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,8 +8,8 @@ disable=
 max-line-length = 100
 
 [isort]
-profile = "black"
+profile = black
 line_length = 100
-default_section = "THIRDPARTY"
-known_first_party = "resto"
-known_third_party = ["_pytest", "spectree", "aiohttp", "attr", "click", "curlify", "fastapi", "flask", "graphene", "graphql", "graphql_server", "hypothesis", "hypothesis_graphql", "hypothesis_jsonschema", "jsonschema", "junit_xml", "packaging", "pydantic", "pytest", "pytest_subtests", "requests", "schemathesis", "starlette", "typing_extensions", "urllib3", "werkzeug", "yaml", "yarl"]
+default_section = THIRDPARTY
+known_first_party = resto
+known_third_party = _pytest,spectree,aiohttp,attr,click,curlify,fastapi,flask,graphene,graphql,graphql_server,hypothesis,hypothesis_graphql,hypothesis_jsonschema,jsonschema,junit_xml,packaging,pydantic,pytest,pytest_subtests,requests,schemathesis,starlette,typing_extensions,urllib3,werkzeug,yaml,yarl
