--- a/nginx/sites-enabled/user-module.conf
+++ b/nginx/sites-enabled/user-module.conf
@@ -3,7 +3,7 @@ location /users {
   proxy_set_header Host "localhost";
 }
 
-location /apidoc {
-  proxy_pass http://user-module:5000/apidoc;
+location /apidoc/ {
+  proxy_pass http://user-module:5000/apidoc/;
   proxy_set_header Host "localhost";
 }
